converted from old html to static php

--- a/index-old.html
+++ b/index-old.html
@@ -15,6 +15,7 @@
             </div>
 		</div>
         <br/>
+        <!-- The header ends here -->
         <center>
             <div class="slideshow">
             <iframe src="slideshow.html" width="690" height="330" scrolling="no"></iframe>
